@@ -34,38 +34,38 @@ public class TechJobsTest {
 
     private static String getFileContents(String fileName) throws IOException {
         Path path = FileSystems.getDefault().getPath(fileName);
-        return Files.readString(path);
+        return new String(Files.readAllBytes( path ));
     }
 
     @Test
     public void testPrintJobs() throws IOException {
         String input = "0\n2\nBuzzbold\nx";
-        String output = runProgramWithInput(input);
-        String expected = getFileContents("src/test/resources/testPrintJobs.txt");
+        String output = runProgramWithInput(input).replace("\r", "");
+        String expected = getFileContents("src/test/resources/testPrintJobs.txt").replace("\r", "");
         assertEquals(expected, output);
     }
 
     @Test
     public void testPrintJobsNoResults() throws IOException {
         String input = "0\n2\nChicago\nx";
-        String output = runProgramWithInput(input);
-        String expected = getFileContents("src/test/resources/testPrintJobsNoResults.txt");
+        String output = runProgramWithInput(input).replace("\r", "");
+        String expected = getFileContents("src/test/resources/testPrintJobsNoResults.txt").replace("\r", "");
         assertEquals(expected, output);
     }
 
     @Test
     public void testFindByValue() throws IOException {
         String input = "0\n0\nRuby\nx";
-        String output = runProgramWithInput(input);
-        String expected = getFileContents("src/test/resources/testFindByValue.txt");
+        String output = runProgramWithInput(input).replace("\r", "");
+        String expected = getFileContents("src/test/resources/testFindByValue.txt").replace("\r", "");
         assertEquals(expected, output);
     }
 
     @Test
     public void testCaseInsensitiveSearch() throws IOException {
         String input = "0\n3\nnew YORk\nx";
-        String output = runProgramWithInput(input);
-        String expected = getFileContents("src/test/resources/testCaseInsensitiveSearch.txt");
+        String output = runProgramWithInput(input).replace("\r", "");
+        String expected = getFileContents("src/test/resources/testCaseInsensitiveSearch.txt").replace("\r", "");
         assertEquals(expected, output);
     }
 
